# mygit

./: .gitignore  .voidrules  CLAUDE.md  GEMINI.md  LICENSE  README.md  blame_view_widget.py  build.sh  check.sh  commit_detail_view.py  commit_dialog.py  commit_graph.py  commit_history_view.py  commit_widget.py  compare_view.py  compare_with_working_dialog.py  custom_tree_widget.py  dag_implementation_plan.md  dag_item_delegate.py  dag_layout_algorithm.py  diff_calculator.py  diff_highlighter.py  diff_improvement_plan.md  diff_viewer.py  file_changes_view.py  file_history_view.py  file_index_optimization_plan.md  find_dialog.py  fix.sh  folder_history_view.py  git_graph_data.py  git_graph_items.py  git_graph_layout.py  git_graph_view.py  git_log_parser.py  git_manager.py  git_manager_window.md  git_manager_window.py  hover_reveal_tree_widget.py  main.py  (+22 more)
.claude/commands/: gemini.md
.cursor/rules/: readme.mdc
.gemini/: styleguide.md
.github/workflows/: check.yml  translations.yml
.idx/: dev.nix
.roo/rules/: readme.md
components/: custom_dropdown.py  dag_item_delegate.py  dropdown_select.py  file_quick_search_popup.py  file_search_widget.py  find_dialog.py  git_reset_dialog.py  hover_reveal_tree_widget.py  multi_select_dropdown.py  new_branch_dialog.py  notification_widget.py  spin_icons.py  user_dropdown.py
dialogs/: compare_with_working_dialog.py  settings_dialog.py
docs/: git_manager_window.md  readme.txt  todo.md  todo.txt  translations.md
editors/: __init__.py  modified_text_edit.py  text_edit.py
gui_tests/: test_text_diff_viewer.py
tests/: TESTING_GUIDELINES.mdc  parent1.txt  parent2.txt  result.txt  test_blame_annotation_click.py  test_commit_graph.py  test_diff_viewer_scroll.py  test_file_index_manager.py  test_git_manager.py  test_high.py  test_multi_highlighter.py  test_ripgrepy.py  test_workspace_explorer.py  trapezoid.py  triangle.py
translations/: app_zh_CN.qm  app_zh_CN.ts
utils/: __init__.py  file_index_manager.py  language_icons.py  language_map.py  translator.py
views/: commit_history_view.py  file_history_view.py  file_tree.py  side_bar_widget.py  top_bar_widget.py
