[project]
name = "mygit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "gitpython>=3.1.44",
    "pyqt6>=6.8.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.11.4",
]

[tool.ruff.lint]
# Enable the flake8-logging-format rules
select = ["G"]

# Logger objects that should be checked
logger-objects = ["app.logger", "logger"]
