[project]
name = "mygit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.11.16", "gitpython>=3.1.44", "pyqt6>=6.8.1"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "python-lsp-black>=2.0.0",
    "python-lsp-isort>=0.2.1",
    "python-lsp-ruff>=2.2.2",
    "ruff>=0.11.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # Pyflakes
    "F", # Pyflakes rules (F821 checks undefined names)

    # Pycodestyle
    "E", # Error-level PEP 8 rules
    "W", # Warning-level PEP 8 rules

    # flake8 plugins
    "G",   # flake8-logging-format rules
    "B",   # flake8-bugbear rules
    "C4",  # flake8-comprehensions rules
    "N",   # pep8-naming rules
    "SIM", # flake8-simplify rules
    "ARG", # flake8-unused-arguments
    "ERA", # eradicate (commented out code)
    "PL",  # pylint rules
    "RUF", # Ruff-specific rules

    # Security
    "S", # flake8-bandit (security)
]

# Logger objects that should be checked
logger-objects = ["app.logger", "logger"]

[tool.isort]
profile = "black"
